Refactor inflight enrich policy locks.